<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <ImageView
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:id="@+id/img_moview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <LinearLayout
                        android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Title"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_title_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Release Date"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_date_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Vote Average"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_vote_a_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Vote Count"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_vote_c_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Original Language"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_language_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <TextView
                                android:text="Adult Rate"
                                android:textAlignment="textStart"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/txt_adult_moview"
                                android:textAlignment="textStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Overview"
                        android:textAlignment="textStart"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txt_overview_moview"
                        android:textAlignment="textStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>